# msnake

./: .envrc  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  default.nix  makedeb.sh  snake.c
DEBIAN/: control
build2/: msnake
build4/: CTestTestfile.cmake  DartConfiguration.tcl  msnake_tests
debian/: control
src/: current_utc_time.h  dialog.c  dialog.h  effects.c  effects.h  events.c  events.h  fruits.c  fruits.h  game.c  game.h  glog.c  glog.h  highscore.c  highscore.h  main.c  main.h  snake.c  snake.h  status-display.c  status-display.h  time-helpers.c  time-helpers.h  types.h
tests/: fruits.check  main.c
